<resources>
    <string name="app_name">ArticlesApp</string>
    <string name="articles_title_text">Articles</string>
    <string name="no_data_message_text">No Data</string>
    <string name="add_article_title_text">Add article</string>
    <string name="article_author_input_hint_text">Author</string>
    <string name="article_title_input_hint_text">Title</string>
    <string name="article_description_input_hint_text">Description</string>
    <string name="save_button_text">SAVE</string>
    <string name="article_details_title">Article details</string>
    <string name="edit_article_title_text">Edit article</string>
    <string name="save_changes_button_text">SAVE CHANGES</string>
    <string name="no_article_error_text">No article found</string>
    <string name="author_format">Author: %s</string>
    <string name="type_format">Type: %s</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item?</string>
    <string name="dialog_positive_text">Yes</string>
    <string name="dialog_negative_text">No</string>
    <string name="empty_text_error">This field is required</string>
</resources>
